@startuml
interface GraphicElement
interface TranslatableGraphicElement
interface EntityLoader

Game .u.|> WindowListener
Game .u.|> KeyListener
Game "1" --> "0..*" UpdatableEntity
Game "1" --> "1" Stats
Game "1" --> "0..*" KeyStatus

CollisionsEngine "1" --> "0..*" Collider

GraphicEngine "1" --> "1" JFrame
GraphicEngine "1" --> "1" JLayeredPane
GraphicEngine "1" --> "0..*" GraphicElement
GraphicEngine "1" --> "*" TranslatableGraphicElement
GraphicEngine "1" --> "2" GameGraphicElement
GraphicEngine "1" --> "1" Font

LanguageConfiguration "1" --> "2" Properties

LevelReader "1" --> "0..*" EntityLoader

RankingManager "1" --> "0..5" ScoreEntry

SoundManager "1" --> "0..*" Clip

Stats "1" --> "1" Timer

StatsPanel -u-|> JPanel
StatsPanel "1" --> "2" JLabel
@enduml
